# PREMIER-LEAGUE-ML

./: .gitignore  README.md  pipeline.py  pyproject.toml  requirements.txt  run_all.bat  test_fail.txt  test_output.txt
.github/workflows/: ci.yml
api/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  config.py  main.py
api/dependencies/: model_dependencies.py
api/middleware/: __init__.py  errors.py  logging.py
api/routes/: dashboard_predictions.py  health.py  models.py  predictions.py
api/schemas/: __init__.py  errors.py  requests.py  responses.py
api/services/: __init__.py  dashboard_prediction_service.py  feature_service.py  match_feature_builder_service.py  metadata_service.py  model_loader.py  prediction_service.py
api/tests/: test_batch_prediction.py  test_ensemble_integration.py  test_feature_service.py  test_match_feature_builder_service.py  test_model_loader.py
config/api/: default.yaml
dashboard/: app.js  dashboard_eda_data.json  dashboard_eda_data_embedded.js  index.html  styles.css
data/: README.md
notebooks/: 01_eda_feature_engineering.ipynb  premier_league_ml_pipeline.ipynb  select_best_models.ipynb  smote_advance_trainer.ipynb
outputs/: model_metrics.json
scripts/: __init__.py  build_dashboard_eda_data.py  download_models.py  evaluate_ensemble.py  ingest_data.py  preprocess_data.py  serve_api.py  train_custom.py
src/: README.md  __init__.py  config.py  dashboard.py  data.py  dataops.py  legacy_models.py  pipeline.py  preprocessing.py  utils.py
tests/: test_api_smoke.py  test_data_integrity.py  test_model_smoke.py
(+481 files in other folders)
